fixed collapsing sidebar issue and displayed icons

--- a/Frontend/src/pages/css/sidebar.css
+++ b/Frontend/src/pages/css/sidebar.css
@@ -1,15 +1,13 @@
 body {
     margin: 0;
     font-family: "Figtree", -apple-system, BlinkMacSystemFont, "Segoe UI", "Figtree", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
     height: 100vh;
     background: #ffffff;
     font-size: 16px;
     font-weight: 400;
 }
 
-.padding_text_from_sidebar {
+.text_from_sidebar {
     line-height: 31px;
 }
 
@@ -19,7 +17,11 @@ body {
 
 .page_title {
     margin-bottom: 40px;
-    margin-top: 20px;
+    padding-top: 11px;
+    letter-spacing: 1px;
+    font-size: 25px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 700;
 }
 
 h2 {
